--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,6 +7,7 @@
 body {
   background-color: $body_color !important;
   font-family: $primary_font !important;
+  color: $text_color !important;
 
   p {
     font-size: 15px;
